--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
         - name: Test
           uses: ianwalter/puppeteer@master
           with:
-            args: npm run test:local
+            args: npm run test
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
